# pgx-lower

./: .build_lock  .clang-format  .clang-tidy  .clangd  .clion.mk  .gitignore  .mcp-back.json  .mcp_bak.json  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  benchmark-config.yaml  build_and_install.sh  build_and_test.sh  build_only.sh  cmake_install.cmake  debug_build_comparison.sql  debug_crash.sql  debug_dsa_simple.cpp  debug_materialize_fix.sql  debug_minimal.sql  debug_real_crash.cpp  debug_segfault.cpp  debug_simple_ir.cpp  debug_stack.sh  debug_stress_test.sql  debug_type_corruption.cpp  debug_util_ops.cpp  dump_llvm_ir.cpp  fix_build_issues.sh  fix_dsa_namespaces.sh  fix_llvm20_api.sh  justfile  kill_gdbserver.sh  launch_postgres_gdbserver.sh  monitor_unit_tests.sh  standalone_debug.cpp  (+17 more)
extension/: CMakeLists.txt  CMakeLists.txt.backup  CTestTestfile.cmake  Makefile  cmake_install.cmake
extension/control/: pgx_lower.control  pgx_lower.control.in
extension/sql/: pgx_lower--1.0.sql
src/compiler/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/compiler/Conversion/: CMakeLists.txt
src/compiler/Dialect/: CMakeLists.txt
src/dialects/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/dialects/db/: DBDialect.cpp  DBOps.cpp  DBTypes.cpp  LowerDBToDSA.cpp  LowerDBToLLVM.cpp
src/dialects/dsa/: DSADialect.cpp  LowerDSAToLLVM.cpp
src/dialects/pg/: LowerPgToSCF.cpp  LowerPgToSCF.cpp.backup  LowerPgToSubOp.cpp  PgDialect.cpp  PgDialect_new.cpp  PgPolymorphicOps.cpp
src/dialects/relalg/: LowerRelAlgToSubOp.cpp  RelAlgDialect.cpp  RelAlgDialectSimple.cpp  RelAlgOps.cpp  RelAlgOpsMinimal.cpp  RelAlgOpsSimple.cpp
src/dialects/subop/: LowerSubOpToDB.cpp  SubOpDialect.cpp  SubOpInterfaces.cpp  SubOpOps.cpp  SubOpToControlFlow.cpp  SubOpToControlFlowMinimal.cpp  SubOpToControlFlowSimple.cpp  SubOpToLLVMPatterns.cpp  SubOperatorOps.cpp
src/dialects/tuplestream/: ColumnManager.cpp  TupleStreamDialect.cpp  TupleStreamOps.cpp
src/dialects/util/: FunctionHelper.cpp  LowerDSAToLLVM.cpp  UtilDialect.cpp  UtilOps.cpp  UtilTypes.cpp
src/lingodb/mlir/: CMakeLists.txt  Passes.cpp
src/lingodb/runtime/: CMakeLists.txt  Hash.cpp  Hashtable.cpp  LazyJoinHashtable.cpp  MetaData.cpp  PgSortRuntime.cpp  PostgreSQLDataSource.cpp  PrintRuntime.cpp  RuntimeSpecifications.cpp  StringRuntime.cpp  Vector.cpp  helpers.cpp  postgresql_runtime.cpp  tuple_access.cpp
src/mlir/: CMakeLists.txt  Passes.cpp
src/mlir/Conversion/: CMakeLists.txt
src/pgx_lower/: CMakeLists.txt  pgx_lower--1.0.sql
src/pgx_lower/expected/: 2_two_tuples.out  basic.out
src/pgx_lower/sql/: 1_one_tuple.sql  2_two_tuples.sql  3_lots_of_tuples.sql  4_two_columns_ints.sql  5_two_columns_diff.sql  6_every_type.sql  basic.sql
src/pgx_lower/sql_sandbox/: init.sql
src/pgx_lower/src/: executor.cpp  executor.h  executor_c.c  executor_c.cpp  executor_c.h  mlir_c_interface.h  mlir_logger.cpp  mlir_logger.h  mlir_logger_pg.cpp  mlir_postgres_interface.cpp  mlir_runner.cpp  mlir_runner.h  my_executor.cpp  my_executor.h  tuple_passthrough_manager.cpp  tuple_passthrough_manager.h
src/runtime/: CMakeLists.txt  DataSourceIteration.cpp  MetaData.cpp  MetaDataOnlyDatabase.cpp  MetaDataStub.cpp  PostgreSQLDataSource.cpp  PostgreSQLMetaData.cpp  PostgreSQLTable.cpp  RuntimeFunctions.cpp  TableBuilder.cpp  helpers.cpp  helpers_stub.cpp  memory_management.cpp  postgresql_memory_impl.cpp  postgresql_runtime.cpp  postgresql_spi_stubs.cpp  tuple_access.cpp
tests/unit/: CMakeLists.txt  README.md  mlir_unit_test.cpp  pipeline_demo_test.cpp  test_basic_terminator.cpp  test_controlflow_operations.cpp  test_datastructure_creation.cpp  test_execution_engine.cpp  test_execution_engine_terminator.cpp  test_expression_handling.cpp  test_gather_scatter_operations.cpp  test_helpers.cpp  test_helpers.h  test_lookup_operations.cpp  test_reduce_operations.cpp  test_runtime_wrapper_pattern.cpp  test_scan_operations.cpp  test_simple_execution_engine.cpp  test_subop_lowering.cpp  test_subop_rewriter.cpp  test_subop_simple.cpp  test_subop_utilities.cpp  test_table_operations.cpp  test_terminator_validation_framework.cpp  test_threadlocal_operations.cpp  test_view_operations.cpp
tests/unit/conversion/: CMakeLists.txt  minimal_hang_repro.cpp  test_architectural_compliance.cpp  test_basetable_streaming.cpp  test_circular_type_fix.cpp  test_column_resolution_fix.cpp  test_complete_pipeline_phase4c4.cpp  test_constant_type_mapping.cpp  test_consumer_chain_fixed.cpp  test_conversion_basics.cpp  test_db_constant_char.cpp  test_db_to_dsa.cpp  test_db_to_std.cpp  test_db_to_std_parent_module.cpp  test_dsa_char_append.cpp  test_dsa_create_table_builder.cpp  test_dsa_to_llvm.cpp  test_dsa_to_std.cpp  test_dsa_to_std_patterns.cpp  test_focused_lowering_validation.cpp  test_functional_conversions.cpp  test_hybrid_relalgto_db.cpp  test_lingodb_column_architecture.cpp  test_materialize_db_ops.cpp  test_materialize_only.cpp  test_materialize_op_lowering.cpp  test_materialize_op_simple.cpp  test_materialize_phase4c2.cpp  test_materialize_to_dsa.cpp  test_minimal_relalg_to_db.cpp  test_minimal_segfault.cpp  test_mlir_architecture_fixes.cpp  test_phase3a_integration.cpp  test_phase4c4_basic.cpp  test_pipeline_integration.cpp  test_relalg_lowering_crash.cpp  test_relalg_to_db.cpp  test_relalg_to_db_fixed.cpp  test_relalg_to_db_fixes.cpp  test_relalg_to_db_phase4c4.cpp  (+16 more)
tests/unit/mlir/: CMakeLists.txt  (+16 more)
tools/: CMakeLists.txt  bench.py  build_queue.sh  comprehensive_namespace_fix.sh  debug-query.sh  fix_tablegen_namespaces.sh  generate_tpch_data.py  interactive-tpch-debug.sh  qbuild.sh  qcmake.sh  qcompile_commands.sh  qctest.sh  qmake.sh  qstatus.sh  qutest.sh  relalg_playground.sh  repeat_test.sh  run-relalg.sh  tpch-debug.sh  validate_tpch.py
tools/build-tools/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  runtime-header-tool.cpp
tools/lingodb-debug/: lingodb_test.py
tools/mlir-test-pipeline/: CMakeLists.txt  main.cpp
tools/mlir-tools/: mlir-to-sql.cpp
(+1442 files in other folders)
