# add_subdirectory(python)  # Temporarily disabled due to pybind11 dependency
# add_subdirectory(mlir-tools)  # Temporarily disabled due to missing pg_query dependency
add_subdirectory(mlir-test-pipeline)
# add_subdirectory(sourcemap)  # Not needed for our test
# add_subdirectory(sql)  # Not needed for our test
# add_subdirectory(sqlite-tester)  # Not needed for our test
# build-tools already included from main CMakeLists.txt
